--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
 body {
-	font-family: "Verdana", serif;
+	font-family: "Verdana", sans-serif;
 	margin: 0;
 	padding: 0;
+}
+
+body::before {
+	content: url("Prismatic-Polka-Dots-Mark-II-2-No-Background-2400px.png");
+	//background: url("Prismatic-Polka-Dots-Mark-II-2-No-Background-2400px.png");
+  	opacity: 0.2;
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	bottom: 0;
+  	right: 0;
+  	z-index: -1;   
 }
 
 header {
@@ -19,10 +31,10 @@ nav:not(#footernav)	{
 ul > li {	
 	display: inline;
 	list-style-type: none;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	border-left: 1px solid white;
 	//margin: 10px;
-	padding: 3px 10px;
+	padding: 5px 40px 10px;
 }
 
 .topnavlink {
@@ -52,7 +64,7 @@ h1 {
 
 main {
     width: 70%;
-    padding: 30px 50px
+    //padding: 30px 50px
 }
 
 form {
